v0. waiting for data

--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -1,5 +1,3 @@
-extends includes/layout
-
-block yield
-  .splash-screen
+header
+  .headline-logo
     img(src="/images/impulso-network-logo.svg", title="Impulso Network", alt="Impulso Network")
