view finished. waiting for data

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,62 +1,1 @@
-@import url("https://use.typekit.net/ilk7sdy.css");
-
-:root {
-  --tomato: #ee3e25;
-  --cool-grey: #a5a9ad;
-  --black: #000000;
-  --slate-grey: #666c71;
-  --white: #ffffff;
-  --blueberry: #484aa0;
-  --silver: #ced4d9;
-  --pale-red: #d73827;
-  --dark-blue-grey: #26265e;
-  --linkedin: #0077b5;
-}
-
-body {
-  font-size: 14px;
-  font-family: "proxima-nova", sans-serif;
-	-ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  overflow-x: hidden;
-  overflow-y: scroll;
-}
-
-.splash-screen {
-  display: flex;
-  width: 100vw;
-  height: 100vh;
-  align-items: center;
-  justify-content: center;
-}
-
-.headline-logo img {
-  height: 3em;
-  margin: 3em auto 6em;
-  display: flex;
-}
-
-.copyright {
-  color: var(--dark-blue-grey);
-  text-align: center;
-  margin: 1em 0 2em;
-  line-height: 1em;
-}
-
-main {
-  max-width: 1200px;
-  width: 90vw;
-  display: flex;
-  margin: auto;
-  min-height: calc(100vh - 16em);
-  flex-direction: column;
-  flex-wrap: nowrap;
-}
-
-h1.title-super {
-  font-size: 2.5em;
-  text-align: center;
-  margin: 1em 0 2em;
-  color: var(--tomato);
-  text-transform: uppercase;
-}
+﻿@import url("https://use.typekit.net/ilk7sdy.css");@import url("/normalize.css");h1{color:#EE3E25;text-transform:uppercase;margin:1em 0 2em}@media (max-width: 680px){h1{margin:0 0 1.5em}}h1.title-super{font-size:2.5em;text-align:center}a{transition:.3s all ease-in-out;color:inherit}a:hover{color:#EE3E25}p{margin:0 0 .25em}.container{max-width:720px;width:90vw;display:flex;margin:auto;min-height:calc(100vh - 16em);flex-direction:column;flex-wrap:nowrap}.row{display:flex;flex-direction:row;align-items:center;justify-content:space-between;margin:0 -.75em}@media (max-width: 680px){.row{flex-direction:column;align-items:flex-start}}.col{flex:1;padding:0 .75em}.col__small{flex:initial}*,*::before,*::after{box-sizing:border-box}body{font-size:14px;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;overflow-x:hidden;overflow-y:scroll;font-family:"proxima-nova", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"}ul,ol{padding:0;margin:0}.splash-screen{display:flex;width:100vw;height:100vh;align-items:center;justify-content:center}.copyright{color:#26265e;text-align:center;margin:1em 0 2em;line-height:1em}@media (max-width: 680px){.copyright{margin:2em 0}}.headline-logo img{height:3em;margin:3em auto 6em;display:flex}.gamer a{text-decoration:none;padding:2em}@media (max-width: 680px){.gamer a{padding:1em 0}}.gamer a:hover{background-color:#FBFBFB}.gamer__name{color:#26265e;font-weight:bold;font-size:1.75em;margin:0 0 .25em}@media (max-width: 680px){.gamer__name{font-size:1.2em}}.gamer__level{color:#a5a9ad;font-size:1.2em;font-weight:bold}@media (max-width: 680px){.gamer__level{font-weight:normal;font-size:1em}}.gamer__xp{font-size:2.5em;text-align:right;color:#EE3E25;text-transform:uppercase;font-weight:bold}@media (max-width: 680px){.gamer__xp{font-size:1.5em}}.ranking__list{list-style:none;counter-reset:ranking-counter}@media (max-width: 680px){.ranking__list-item{display:flex}.ranking__list-item:nth-child(odd){background-color:#FBFBFB}}.ranking__list-item::before{content:counter(ranking-counter) "º";counter-increment:ranking-counter;padding:1em .5em;float:left;color:#ced4d9;font-size:34px;font-weight:bold}@media (max-width: 680px){.ranking__list-item::before{padding:.75em}}.ranking__list-footer{color:#666c71;text-align:center;margin-top:50px}
