--- a/views/ranking.pug
+++ b/views/ranking.pug
@@ -7,7 +7,7 @@ block yield
     section.ranking
       ol.ranking__list
         li.ranking__list-item.gamer
-          a.row(href="javascript:;")
+          a.row(href="/ranking/user/U9670TYSJ")
             .col
               p.gamer__name Lázaro Alvarenga
               span.gamer__level Nível 2
