--- a/stylesheets/helpers/variables.scss
+++ b/stylesheets/helpers/variables.scss
@@ -10,4 +10,10 @@ $color-pale-red: #d73827;
 $color-dark-blue-grey: #26265e;
 $color-light-grey: #FBFBFB;
 
+// font
+$font-size: 14px;
+$title-size: $font-size * 2.5;
+
 // extra
+$border: 1px solid $color-silver;
+$border-radius: 2px;
