--- a/stylesheets/components/footer.scss
+++ b/stylesheets/components/footer.scss
@@ -1,10 +1,10 @@
 .copyright {
   color: $color-dark-blue-grey;
   text-align: center;
-  margin: 1em 0 2em;
-  line-height: 1em;
+  margin: $font-size 0 ($font-size * 2);
+  line-height: $font-size;
 
   @include mobile {
-    margin: 2em 0;
+    margin: ($font-size * 2) 0;
   }
 }
