--- a/stylesheets/components/header.scss
+++ b/stylesheets/components/header.scss
@@ -1,8 +1,8 @@
 .headline-logo {
 
   img {
-    height: 3em;
-    margin: 3em auto 6em;
+    height: ($font-size * 3);
+    margin: ($font-size * 3) auto ($font-size * 6);
     display: flex;
   }
 }
