--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -12,7 +12,7 @@
 }
 
 body {
-  font-size: 14px;
+  font-size: $font-size;
 	-ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   overflow-x: hidden;
