--- a/stylesheets/components/ranking.scss
+++ b/stylesheets/components/ranking.scss
@@ -17,10 +17,10 @@
       &::before {
         content: counter(ranking-counter) "º";
         counter-increment: ranking-counter;
-        padding: $font-size ($font-size * .5);
+        padding: ($font-size * 2) ($font-size * 1.5);
         float: left;
         color: $color-silver;
-        font-size: ($font-size * .25);
+        font-size: ($font-size * 2.5);
         font-weight: bold;
 
         @include mobile {
