--- a/stylesheets/helpers/grid.scss
+++ b/stylesheets/helpers/grid.scss
@@ -16,6 +16,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex: 1;
+  width: -webkit-fill-available;
   justify-content: space-between;
   margin: 0 -.75em;
 
