Fix items commented by @marciovsena

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,4 @@ extends includes/layout
 
 block yield
   .splash-screen
-    img(src="/images/impulso-network-logo.svg", title="Impulso Network", alt="Impulso Network")
+    img(src="/images/impulso-network-logo.svg", alt="Impulso Network")
