--- a/views/profile.pug
+++ b/views/profile.pug
@@ -5,7 +5,7 @@ block yield
   main.container.fit
     section.gamer__card.gamer
       .row.gamer__profile
-        .col.col__small.gamer__avatar: img(src=user.avatar)
+        .col.col__small.gamer__avatar: img(src=user.avatar, alt="Avatar")
         .col: .row
           .col.gamer__data
             p.gamer__name= user.name
