--- a/views/ranking.pug
+++ b/views/ranking.pug
@@ -7,9 +7,9 @@ block yield
     section.ranking
       ol.ranking__list
         each user in users
-          li.ranking__list-item.gamer: a.row(href=`/ranking/user/${user.slackId}`)
+          li.ranking__list-item.gamer: a.row(href=`/ranking/user/${user.slackId}`, title="Veja os detalhes da pontuação deste Impulser")
             if users.indexOf(user) < 3
-              .col.col__small.gamer__avatar: img(src=user.avatar)
+              .col.col__small.gamer__avatar: img(src=user.avatar, alt="Avatar")
             .col: .row
               .col.gamer__data
                 p.gamer__name= user.name
