Profile footer message is working

--- a/stylesheets/components/gamer.scss
+++ b/stylesheets/components/gamer.scss
@@ -99,8 +99,10 @@
   }
 
   &__avatar {
-    border-radius: $border-radius;
-    overflow: hidden;
+    img {
+      border-radius: $border-radius;
+      overflow: hidden;
+    }
   }
 
   &__badges {
