--- a/views/profile.pug
+++ b/views/profile.pug
@@ -23,5 +23,5 @@ block yield
             .col.col__small
               h4 Reações dadas
               p: strong= user.reactions
-    p.gamer__card-footer= `Faltam ${user.next_level - user.score} XP para chegar no Nível ${user.level + 1}`
+    p.gamer__card-footer= `Faltam ${parseInt(user.next_level - user.score)} XP para chegar no Nível ${user.level + 1}`
   include includes/footer
