--- a/views/profile.pug
+++ b/views/profile.pug
@@ -22,6 +22,7 @@ block yield
               p: strong= user.replies
             .col.col__small
               h4 Reações dadas
-              p: strong= user.reactions
+              p: strong= `Positivas: ${user.reactions.positives}`
+              p: strong= `Negativas: ${user.reactions.negatives}`
     p.gamer__card-footer= `Faltam ${user.next_level - user.score} XP para chegar no Nível ${user.level + 1}`
   include includes/footer
